--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -1,5 +1,9 @@
 /* CSS ABA PRODUTOS*/
-
+header {
+    background: #bbbbbb;
+    
+    
+}
 .produtos{
     width: 940px;
     margin: 0 auto;
@@ -17,6 +21,7 @@
     border: 2px solid #000000;
     border-radius: 10px;
     box-shadow: 10px 10px 30px #000000;
+    background: linear-gradient(#888888, #1C1C1C);
 }
 
 .produtos li:hover {
