--- a/CSS/contatos.css
+++ b/CSS/contatos.css
@@ -1,10 +1,15 @@
 /* Css dos contatos*/
+
+
+
 main {
     margin: 0 0 0 60px;
+    
 }
 
 form {
-    margin: 40px 0;    
+    margin: 40px 0;   
+    background: linear-gradient(#888888, #1C1C1C);
 }
 
 form label, form legend, form p {
@@ -49,6 +54,7 @@ form label, form legend, form p {
 
 table {
     margin: 20px 0 40px;
+    background: linear-gradient(#FEFEFE, #888888);
 }
 
 thead, tfoot {
