--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -21,6 +21,7 @@ header {
     vertical-align: top;
     padding: 30px 20px;
     margin: 0 1.5%;
+    background: #FEFEFE;
     box-sizing: border-box;
     border: 2px solid #000000;
     border-radius: 10px;
